Fix collapse issue

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
     --FONT-MEDIUM: 1.2rem;
     --FONT-SMALL: 1rem;
     --MAIN-WRAPPER-WIDTH: 90%;
+    --PADDING-BIG: 0.3rem;
   }
 }
 
@@ -76,6 +77,9 @@ div.main-wrapper {
   backdrop-filter: blur(10px);
   background-color: rgba(168, 219, 74, 0.5);
   box-shadow: 0 0 30px rgba(78, 63, 21, 0.4);
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
 .navbar-wrapper {
@@ -265,7 +269,6 @@ input {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-auto-rows: 1fr;
   grid-gap: 10px;
 }
 
@@ -273,13 +276,32 @@ input {
   border: solid red 3px;
   padding: var(--PADDING-BIG);
   border-radius: var(--BORDER-RADIUS-BIG);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
 }
 
 .book-tag-wrapper .book-tag-title,
 .book-tag-wrapper .book-tag-author {
+  margin: 5px;
   display: -webkit-box;
   -webkit-line-clamp: 2; /* Two lines for the title */
   -webkit-box-orient: vertical;
+  line-clamp: 2;
+  box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.book-tag-wrapper .book-tag-pageNum {
+  margin: 5px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* Two lines for the title */
+  -webkit-box-orient: vertical;
+  line-clamp: 1;
+  box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
 }
